# openai_compatible_watsonx_api

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  watsonx-openai-api.py
