[project]
name = "watsonx-openai-compatible-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ibm-watsonx-ai>=1.4.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "uvicorn>=0.40.0",
]
